# embedded_avionics_logger

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml  build.yml
src/: main.cpp  pinout.h
src/imu/: MPU6050.cpp  MPU6050.h
src/recorder/: Recorder.cpp  Recorder.h
src/utils/: Utils.cpp  Utils.h
